fix game board alignment and X, O alignment

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -97,5 +97,10 @@ nav {
   background-color: #fff;
   display: inline-block;
   height: 33%;
-  width: 30%;
+  width: 33%;
+  border: 1px solid blue;
+  font-size: 10em;
+  color: blue;
+  text-align: center;
+  float:left;
 }
